--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,12 @@ djangorestframework-simplejwt
 m3u8
 rapidfuzz==3.13.0
 tzlocal
+guessit==3.7.1
+tmdbsimple==2.9.1
+aiohttp==3.11.10
+python-dateutil==2.9.0.post0
+pymediainfo==6.1.0
+python-Levenshtein==0.25.0
 
 # PyTorch dependencies (CPU only)
 --extra-index-url https://download.pytorch.org/whl/cpu/
